# QApp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
App/: CMakeLists.txt  main.cpp
bench/: CMakeLists.txt  tst_libcore_benchmark.cpp
cli/: CMakeLists.txt  main.cpp
libcore/: CMakeLists.txt  libcore.cpp  libcore.h
tests/: CMakeLists.txt  tst_libcore_add_test.cpp
